--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.file_field :name %>
     <%= f.text_field :remote_name_url %>
+    <%= f.collection_select :gallery_id, @galleries, :id, :name, :class => "col-md-3" %>
   </div>
   <div class="actions">
     <%= f.submit %>
