--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,19 +1,4 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @image.name %>
-</p>
-
-<p>
-  <strong>Width:</strong>
-  <%= @image.width %>
-</p>
-
-<p>
-  <strong>Height:</strong>
-  <%= @image.height %>
-</p>
-
-<%= link_to 'Edit', edit_image_path(@image) %> |
-<%= link_to 'Back', images_path %>
+<div align="center">
+  <%= image_tag @image.name %>
+</div>
