updated ability file

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Galleries</h1>
+<h1 align="center">Photo Galleries</h1>
 <% @galleries.each do |gallery| %>
     <div style="float: left; padding-right: 1rem">
     <p><%= link_to (image_tag gallery.images.first.name), gallery_path(gallery.id), class: "gallery_images" %></p>
