--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div style="float: left;">
 <% @gallery.images.each do |image| %>
-   <%= link_to (image_tag image.name), image_path(image.id), class: "gallery_iamges" %>
+   <%= link_to (image_tag image.name), image_path(image.id), class: "gallery_images" %>
 <% end %>
 </div>
 
