--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,7 +25,7 @@
           <%= image_tag post.image_url, :class => "post_img" if post.image? %>
         </div>
         <div class="post_text">
-          <p><%= post.content.html_safe %></p>
+          <%= post.content.html_safe %>
         </div>
         <div class="clear"> </div>
         <hr>
