fixed some issues with the posts on the home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -101,10 +101,11 @@ background-color: $FooterBackground;
 }
 
 //picture on the cards
-.post_img{
+.post_img img{
 width: 40%;
 float: left;
 height: auto;
+
 }
 
 //text on the cards
