--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing posts</h1>
 
+<%= link_to 'New Post', new_post_path, "data-no-turbolink" => true  %>
+
 <table>
   <thead>
   <tr>
@@ -14,13 +16,10 @@
   </thead>
 
   <tbody>
-  <% @posts.each do |post| %>
+  <% @posts.reverse.each do |post| %>
       <tr>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
-        <td><%= post.top_card %></td>
-        <td><%= post.author %></td>
-        <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post), 'data-no-turbolink' => true  %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -29,5 +28,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Post', new_post_path, "data-no-turbolink" => true  %>
