--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -602,6 +602,13 @@ body {
   padding-left: .5rem;
   padding-bottom: .5rem;
 }
+
+.image_images img{
+  width: 30rem;
+  height: auto;
+  padding-left: .5rem;
+  padding-bottom: .5rem;
+}
 a.gallery_imges img:hover{
   background-color: transparent !important;
 }
