--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -3,5 +3,5 @@
     <%= @image.name%>
 <% end %>
 <div align="center">
-  <%= image_tag @image.name, style: "width: auto; height: 30rem;"%>
+  <%= image_tag @image.image_url, style: "width: auto; height: 30rem;"%>
 </div>
