--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -7,7 +7,7 @@
 
 <% @images.each do |image| %>
   <div class="clear">
-    <%= image_tag image.name %>
+    <%= link_to (image_tag image.name), image_path(image.id), style: 'width: auto; height: 30rem;' %>
     <%= link_to 'Edit', edit_image_path(image), 'data-no-turbolink' => true  %>
     <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
   </div>
