--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -4,5 +4,5 @@
 </h1>
 
 <div align="center">
-  <%= image_tag @image.image_url, style: "width: auto; height: 30rem;"%>
+  <%= image_tag @image.picture_url, style: "width: auto; height: 30rem;"%>
 </div>
