--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
       <div class="card">
         <h1 class="card_header"><%= @top_card.title %></h1>
         <div>
-          <%= link_to (image_tag @top_card.images.first.picture_url ), image_url(@top_card.images.first.id), :class => "post_img"%>
+          <%= (link_to (image_tag @top_card.images.first.picture_url ), image_path(@top_card.images.first.id), :class => "post_img") if (!@top_card.images.empty? and @top_card.images.first.picture?) %>
         </div>
         <div class="post_text">
             <%= @top_card.content.html_safe %>
@@ -18,7 +18,9 @@
     <% @posts.each do |post| %>
       <div class="card">
         <h1 class="card_header"><%= post.title %></h1>
-
+        <div>
+          <%= (link_to (image_tag post.images.first.picture_url ), image_path(post.images.first.id), :class => "post_img") if(!post.images.empty? and post.images.first.picture?) %>
+        </div>
         <div class="post_text">
           <%= post.content.html_safe %>
         </div>
