--- a/app/views/alumni_news_letters/_form.html.erb
+++ b/app/views/alumni_news_letters/_form.html.erb
@@ -1,4 +1,5 @@
-<div class="col-md-6 center-block row">
+<div class="row">
+<div class="col-md-6 col-md-offset-3 top-card-padding">
   <div class="card" align="center">
 <%= form_for(@alumni_news_letter) do |f| %>
   <% if @alumni_news_letter.errors.any? %>
@@ -27,3 +28,4 @@
 <% end %>
 </div>
     </div>
+</div>
