--- a/app/views/users/edit_all.html.erb
+++ b/app/views/users/edit_all.html.erb
@@ -1,4 +1,6 @@
 <!--http://anthonylewis.com/2011/04/15/editing-multiple-records-in-rails/comment-page-1/#comment-1760-->
+<br><br>
+<div class="posts_checkboxes">
 <%= form_for :user, :url => update_all_path, :html => { :method => :put } do %>
     <table>
       <tr>
@@ -6,7 +8,7 @@
         <th>Last Name</th>
         <th>Email</th>
         <th>Role</th>
-        <th></th>
+        <th>Confirmed Brother</th>
       </tr>
       <% @users.each do |user| %>
           <%= fields_for "user[]", user do |user_fields| %>
@@ -15,6 +17,7 @@
                 <td><%= user_fields.text_field :last_name,:disabled => true %></td>
                 <td><%= user_fields.email_field :email,:disabled => true %></td>
                 <td><%= user_fields.collection_select :role, User::ALLROLES, :to_s, :to_s, :class => "col-md-3" %></td>
+                <td style="padding-left: 2rem"><%= user_fields.check_box :confirmed_brother %></td>
               </tr>
           <% end %>
       <% end %>
@@ -24,6 +27,7 @@
       <%= submit_tag %>
     </div>
 <% end %>
+</div>
 
 <div class="col-md-6 center-block">
   <div align="center">
