--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,7 +60,6 @@ background-color: transparent !important;
 
 //Sets the footer size and color
 .footer {
-margin-top: 19rem;
 padding-top: 5px;
 background-color: $FooterBackground;
 }
@@ -760,4 +759,31 @@ and (max-device-width : 480px) {
     display:block !important;
     overflow: hidden;
   }
+}
+
+html,
+body {
+  margin:0;
+  padding:0;
+  height:90%;
+}
+#container {
+  min-height:90%;
+  position:relative;
+}
+#header {
+  padding:10px;
+}
+#body {
+  padding:10px;
+  padding-bottom:60px;   /* Height of the footer */
+}
+#footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
+}
+#container {
+  height:100%;
 }
