--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,7 +95,7 @@ background-color: $FooterBackground;
 //Home Page
 //Padding on the unmoveable card
 .top-card-padding{
-  padding-top: 4rem;
+  padding-top: 9rem;
   padding-bottom: 3rem;
 }
 
@@ -760,7 +760,7 @@ and (max-device-width : 480px) {
     overflow: hidden;
   }
 }
-
+//Start formating of basic page
 html,
 body {
   margin:0;
@@ -784,6 +784,22 @@ body {
   width:100%;
   height:60px;   /* Height of the footer */
 }
+//Helps with internet exploer 5/6
 #container {
   height:100%;
+}
+//End formatting of basic page
+
+@media (max-width: 444px) {
+  .recaptchatable #recaptcha_image {
+    margin: 0 !important;
+    width: 200px !important;
+    float:left !important;
+  }
+  .recaptchatable #recaptcha_image img {
+    max-width:100%;
+  }
+  .recaptchatable .recaptcha_r1_c1, .recaptchatable .recaptcha_r3_c1, .recaptchatable .recaptcha_r3_c2, .recaptchatable .recaptcha_r7_c1, .recaptchatable .recaptcha_r8_c1, .recaptchatable .recaptcha_r3_c3, .recaptchatable .recaptcha_r2_c1, .recaptchatable .recaptcha_r4_c1, .recaptchatable .recaptcha_r4_c2, .recaptchatable .recaptcha_r4_c4, .recaptchatable .recaptcha_image_cell, .recaptchatable .recaptcha_r2_c2 {
+    background: none !important;
+  }
 }
