--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,26 +1,21 @@
 <div class="row">
-  <div class="top-card-padding">
   <% unless @posts.previous_page or @top_card.nil? %>
-        <div class="col-md-8 col-md-offset-2" >
-      <div class="card">
-        <h1 class="card_header"><%= @top_card.title %></h1>
-        <div>
-          <%= (link_to (image_tag @top_card.images.first.picture_url ), image_path(@top_card.images.first.id), :class => "post_img") if (!@top_card.images.empty? and @top_card.images.first.picture?) %>
-        </div>
-        <div class="post_text">
+      <div class="col-md-8 col-md-offset-2 top-card-padding">
+        <div class="card">
+          <h1 class="card_header"><%= @top_card.title %></h1>
+          <div>
+            <%= (link_to (image_tag @top_card.images.first.picture_url ), image_path(@top_card.images.first.id), :class => "post_img") if (!@top_card.images.empty? and @top_card.images.first.picture?) %>
+          </div>
+          <div class="post_text">
             <%= @top_card.content.html_safe %>
+          </div>
+          <div class="clear"> </div>
         </div>
-        <div class="clear"> </div>
       </div>
-        </div>
-    <% end %>
-    <br>
-    <br>
-    <br>
-    <br>
+  <% end %>
 
-    <div class="col-md-8 col-md-offset-2">
-      <% @posts.each do |post| %>
+  <div class="col-md-8 col-md-offset-2">
+    <% @posts.each do |post| %>
         <div class="card">
           <h1 class="card_header"><%= post.title %></h1>
           <div>
@@ -32,21 +27,21 @@
           <div class="clear"> </div>
           <hr>
         </div>
-      <% end %>
-    </div>
-  </div>
-
-  <div class="col-md-6 center-paginate">
-    <div align="center">
-      <h3>
-        <% if @posts.previous_page %>
-            <%= link_to "< Previous", params.merge(:page => @posts.previous_page) %>
-        <% end %>
-        Page <%= @posts.current_page %> of <%= @posts.total_pages %>
-        <% if @posts.next_page %>
-            <%= link_to "Next >", params.merge(:page => @posts.next_page) %>
-        <% end %>
-      </h3>
-    </div>
+    <% end %>
   </div>
 </div>
+<div class="col-md-6 center-paginate">
+  <div align="center">
+    <h3>
+      <% if @posts.previous_page %>
+          <%= link_to "< Previous", params.merge(:page => @posts.previous_page) %>
+      <% end %>
+      Page <%= @posts.current_page %> of <%= @posts.total_pages %>
+      <% if @posts.next_page %>
+          <%= link_to "Next >", params.merge(:page => @posts.next_page) %>
+      <% end %>
+    </h3>
+  </div>
+</div>
+
+<div class="clear"></div>
