--- a/app/views/alumni_news_letters/_form.html.erb
+++ b/app/views/alumni_news_letters/_form.html.erb
@@ -1,31 +1,26 @@
-<div class="row">
-<div class="col-md-6 col-md-offset-3 top-card-padding">
-  <div class="card" align="center">
-<%= form_for(@alumni_news_letter) do |f| %>
-  <% if @alumni_news_letter.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@alumni_news_letter.errors.count, "error") %> prohibited this alumni_news_letter from being saved:</h2>
+<div align="center">
+  <%= form_for(@alumni_news_letter) do |f| %>
+    <% if @alumni_news_letter.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@alumni_news_letter.errors.count, "error") %> prohibited this alumni_news_letter from being saved:</h2>
+        <ul>
+          <% @alumni_news_letter.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-      <ul>
-      <% @alumni_news_letter.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+      <div class="field">
+        <%= f.label :released_date %><br>
+        <%= f.date_select :released_date %>
+      </div>
+      <div class="field">
+        <%= f.label :news_letter_html, "HTML Link for the Alumni News Letter" %><br />
+        <%= f.text_area :news_letter_html %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Post News Letter" %>
+      </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :released_date %><br>
-    <%= f.date_select :released_date %>
-  </div>
-    <div class="field">
-      <%= f.label :news_letter_html, "Alumni News Letter HTML" %><br />
-      <%= f.text_area :news_letter_html %>
-    </div>
-  <div class="actions">
-    <%= f.submit "Post News Letter" %>
-  </div>
-<% end %>
-</div>
-    </div>
 </div>
