--- a/app/views/alumni_news_letters/edit.html.erb
+++ b/app/views/alumni_news_letters/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing alumni_news_letter</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @alumni_news_letter %> |
-<%= link_to 'Back', alumni_news_letters_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>Edit Current Alumni News Letter</h1>
+      <%= render 'form' %>
+      <%= link_to 'Back', alumni_news_letters_path %>
+    </div>
+  </div>
+</div>
