--- a/app/views/alumni_news_letters/new.html.erb
+++ b/app/views/alumni_news_letters/new.html.erb
@@ -1,3 +1,8 @@
-<h1>New alumni_news_letter</h1>
-
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>New Alumni News Letter</h1>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
