updated image and gallery page

--- a/app/views/galleries/edit.html.erb
+++ b/app/views/galleries/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing gallery</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>Edit Current Gallery</h1>
 
-<%= render 'form' %>
+      <%= render 'form' %>
 
-<%= link_to 'Show', @gallery %> |
-<%= link_to 'Back', galleries_path %>
+      <%= link_to 'Show', @gallery %> |
+      <%= link_to 'Back', galleries_path %>
+    </div>
+  </div>
+</div>
+
