--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New gallery</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>New Gallery</h1>
 
-<%= render 'form' %>
+      <%= render 'form' %>
 
-<%= link_to 'Back', galleries_path %>
+      <%= link_to 'Back', galleries_path %>>
+    </div>
+  </div>
+</div>
+
