--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>Editing image</h1>
-
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>Editing Image</h1>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
