--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New image</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', images_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>New Image</h1>
+      <%= render 'form' %>
+      <%= link_to 'Back', images_path %>
+    </div>
+  </div>
+</div>
