--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= receipt.total_spent %></td>
         <td><%= receipt.picture_of_receipt %></td>
-        <td><%= receipt.brother_who_sumbitted %></td>
+        <td><%= receipt.brother_who_submitted %></td>
         <td><%= receipt.seen_receipt %></td>
         <td><%= link_to 'Show', receipt %></td>
         <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
