--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Brother who sumbitted:</strong>
-  <%= @receipt.brother_who_sumbitted %>
+  <%= @receipt.brother_who_submitted %>
 </p>
 
 <p>
