--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
 
 <div id="container">
   <div id="header"><%= render 'layouts/header' %></div>
-  <div id="body">
-    <% flash.each do |name, msg| %>
+  <% flash.each do |name, msg| %>
       <% if name == :alert %>
-        <%= content_tag :div, msg, class: "alert alert-info" %>
+          <%= content_tag :div, msg, class: "alert alert-info" %>
       <% else %>
-        <%= content_tag :div, msg, class: "alert notice-info" %>
+          <%= content_tag :div, msg, class: "alert notice-info" %>
       <% end %>
-    <% end %>
+  <% end %>
+  <div id="body">
     <%= yield %>
   </div>
-
+  <div id="footer"></div>
 </div>
 </html>
 
